# old_rez_packages

./: .bashrc  dpool.yml  rez_base_env.sh  rezrealm.py
alembic/1.5.8/: CMakeLists.txt  package.py
boost/1.55.0/: package.py
ffmpeg/2.8/: CMakeLists.txt  build.sh  package.py
gcc/4.1.2/: package.py
gcc/4.8.2/: package.py
hdf5/1.8.9/: package.py
houdini/14.0.201.13/: package.py
ilmbase/2.2.0/: package.py
katana/1.6v3/: package.py
katana/2.0v4/: package.py
libjpeg/v9a/: CMakeLists.txt  package.py
libpng/1.6.18/: CMakeLists.txt  package.py
libtiff/4.0.5/: CMakeLists.txt  package.py
maya/2015/: package.py
mtoa/1.1.2.1/: package.py
ocio/1.0.9/: CMakeLists.txt  package.py
oiio/1.5.19/: CMakeLists.txt  package.py
openexr/2.2.0/: CMakeLists.txt  package.py
openjpeg/2.1/: CMakeLists.txt  package.py
os/Fedora-22/: package.py
prman/19.0/: package.py
ptex/2.0.42/: CMakeLists.txt  package.py
ptex/2.0.62/: CMakeLists.txt  package.py
pyilmbase/2.2.0/: CMakeLists.txt  package.py
python_libraries/: package.py
python_libraries/PyYAML/3.11/: package.py
python_libraries/ShotgunORM/1.0.0/: CMakeLists.txt  package.py
python_libraries/argcomplete/1.0.0/: package.py
python_libraries/cython/0.23.2/: CMakeLists.txt  package.py
python_libraries/numpy/1.9.2/: CMakeLists.txt  package.py
python_libraries/pymemcache/1.3.3/: package.py
python_libraries/redis/2.10.3/: package.py
python_libraries/requests/2.7.0/: package.py
python_libraries/shotgun_api3/3.0.22/: CMakeLists.txt  package.py
qt/4.8.6/: CMakeLists.txt  package.py
rms/19.0/: package.py
shows/dpool/: package.py
